--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,7 +1,7 @@
 ---
 galaxy_info:
   author: mkwmms
-  description: "Install & configure (dotfiles & change default shell) the fish shell."
+  description: "Install & configure the fish shell."
   license: GPLv3
   min_ansible_version: 2.0
   platforms:
