--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,20 +1,27 @@
 ---
-# tasks file for dotstrap-fish
+
+- name: install
+  package: name=fish state=present
+  tags:
+    - bootstrap
+    - install
 
 - block:
-  - name: install shell
-    package: name=fish state=present
+    - name: determine shell executable location
+      command: which fish
+      register: fish
 
-  - name: determine shell executable location
-    command: which fish
-    register: fish
+    - name: configure | change default shell
+      user: name="{{ user_name }}" shell="{{ fish.stdout }}"
+      become: yes
 
-  - name: change default shell
-    user: name="{{ user_name }}" shell="{{ fish.stdout }}"
-    become: yes
-
-  - name: create shell configuration file
-    template: src=config.j2
-              dest="{{ ansible_user_dir }}/.config/fish/config.fish"
-              owner="{{ user_name }}" force=yes backup=yes
-  tags: bootstrap
+    - name: configure | fish config file
+      template:
+        src: config.j2
+        dest: "{{ ansible_user_dir }}/.config/fish/config.fish"
+        owner: "{{ user_name }}"
+        force: yes
+        backup: yes
+  tags:
+    - bootstrap
+    - configure
