--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,8 @@
 language: python
 python: "2.7"
 
-# Use the new container infrastructure
-sudo: false
+# Do not use the new container infrastructure
+sudo: true
 
 # Install ansible
 addons:
@@ -26,11 +26,11 @@ script:
   - ansible-playbook tests/test.yml -i tests/inventory --syntax-check
 
   # Run the role
-  - ansible-playbook tests/test.yml -i tests/inventory --connection=local -vvv
+  - ansible-playbook tests/test.yml -i tests/inventory --connection=local -b -vvv
 
   # Run the role again, checking to make sure it's idempotent
   # - >
-    # ansible-playbook tests/test.yml -i tests/inventory --connection=local
+    # ansible-playbook tests/test.yml -i tests/inventory --connection=local -b
     # | grep -q 'changed=0.*failed=0'
     # && (echo 'Idempotence test: pass' && exit 0)
     # || (echo 'Idempotence test: fail' && exit 1)
