--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,24 +1,27 @@
 ---
 
-- name: install
-  package: name=fish state=present
+- name: package | fish
+  package: name="{{ fish_name }}" state="{{ install_state }}"
   tags:
     - bootstrap
     - install
 
 - block:
-    - name: determine shell executable location
-      command: which fish
+    - name: setup | determine shell executable location
+      command: command -s fish
       register: fish
 
     - name: configure | change default shell
       user: name="{{ user_name }}" shell="{{ fish.stdout }}"
-      become: yes
+      become_user: "{{ user_name }}"
+
+    - name: setup | create config directory
+      file: path="{{ fish_config_file | dirname }}" state=directory follow=yes
 
     - name: configure | fish config file
       template:
         src: config.j2
-        dest: "{{ ansible_user_dir }}/.config/fish/config.fish"
+        dest: "{{ fish_config_file }}"
         owner: "{{ user_name }}"
         force: yes
         backup: yes
