--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -15,16 +15,16 @@
       user: name="{{ user_name }}" shell="{{ fish.stdout }}"
       become_user: "{{ user_name }}"
 
-    - name: setup | create config directory
-      file: path="{{ fish_config_file | dirname }}" state=directory follow=yes
+    # - name: setup | create config directory
+    #   file: path="{{ fish_config_file | dirname }}" state=directory follow=yes
 
-    - name: configure | fish config file
-      template:
-        src: config.j2
-        dest: "{{ fish_config_file }}"
-        owner: "{{ user_name }}"
-        force: yes
-        backup: yes
+    # - name: configure | fish config file
+    #   template:
+    #     src: config.j2
+    #     dest: "{{ fish_config_file }}"
+    #     owner: "{{ user_name }}"
+    #     force: yes
+    #     backup: yes
   tags:
     - bootstrap
     - configure
