--- a/meta/main.yml
+++ b/meta/main.yml
@@ -2,7 +2,7 @@
 galaxy_info:
   author: mwilliammyers
   description: Install & configure the fish shell
-  license: GPLv3
+  license: MIT
   min_ansible_version: 2.0
   platforms:
     - name: GenericUNIX
